システムに同期したテーマを適用できるように変更。jpackageタスクを作成。ログファイル出力。